--- a/views/home/turism.ejs
+++ b/views/home/turism.ejs
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <script src="resources/js/loader.js"></script>
-    <title>turism | WIAC 2025</title>
+    <title>Turism | WIAC 2025</title>
 </head>
 
 <body>
@@ -37,9 +37,24 @@
     <main class="turisMain">
         <div class="turisContainer">
             <h1 class="title">Tourism</h1>
+            <div class="mdqMoreInfo">
+                <h3>Mar del plata</h3>
+                <img src="/resources/img/mdq.webp" alt="Mar del Plata Beach">
+                <p>Mar del Plata is a coastal city located in the province of Buenos Aires, Argentina, recognized as one of the country's top tourist destinations. Famous for its wide beaches, vibrant nightlife, and diverse cultural activities, it blends natural attractions with modern infrastructure. Its economy also stands out for its fishing industry and international events, such as the International Film Festival. The municipal tourism office promotes unique experiences, ranging from seaside strolls and water sports to exploring its historic architecture and savoring delicious seafood-based cuisine.</p>
+                <p>Mar del Plata is a neighboring city and the main urban center near Santa Clara del Mar, located about 18 kilometers to the south. It serves as an important point of reference for the residents and tourists of Santa Clara del Mar.</p>
+                <p class="mdqMoreInfoPbottom"><strong>for more information</strong></p><a href="https://www.turismomardelplata.gob.ar/" target="_blank">CLICK HERE</a>
+            </div>
+            <div class="santaClaraMoreInfo">
+                <h3>Santa Clara del Mar</h3>
+                <img src="/resources/img/santaClara.jpg" alt="Santa Clara del Mar beach">
+                <p>This tourist destination is characterized by its tranquility, with wide beaches of warm waters and a relaxed atmosphere, ideal for those looking to escape the hustle and bustle of big cities. The town offers a variety of accommodation, restaurants, and outdoor activities, such as coastal walks and water sports. Santa Clara del Mar is popular among both tourists seeking rest and those who enjoy the natural beauty of the region.
+                </p>
+                <p class="mdqMoreInfoPbottom"><strong>for more information</strong></p><a href="https://santaclaradelmar.com/" target="_blank">CLICK HERE</a>
+            </div>
+            <h2 class="subtitle">Hotels</h2>
             <div class="turismHotel">
                 <h3>HOTEL KONKE</h3>
-                <p>Mar del Plata</p>
+                <p class="topP">Mar del Plata</p>
                 <div class="hotelRight">
                     <div class="slider">
                         <div class="slides">
@@ -85,7 +100,7 @@
             </div>
             <div class="turismHotel">
                 <h3>HOTEL NOVI</h3>
-                    <p>Mar del Plata</p>
+                    <p class="topP">Mar del Plata</p>
                 <div class="hotelRight">       
                     <div class="slider">
                         <div class="slides">
@@ -128,6 +143,8 @@
                     </span>
                 </div>
             </div>
+            
+            <h2 class="subtitle">Excursions, transfers and tourist advice</h2>
             <div class="club360">
                 <img src="/resources/img/Club360.png" alt="club 360">
                 <h3>Services:</h3>
@@ -141,6 +158,21 @@
                     <p>Whatsapp +54 9 223 6872911</p>
                     <p>serviciosclub360@gmail.com</p>
                 </div>
+            </div>
+            <div class="tiendaLeonMoreinfo">
+                <img src="/resources/img/tiendaLeon.jpg" alt="Tienda Leon">
+                <h3>Services:</h3>
+                <ul>
+                    <li>Transfers from Buenos Aires airports to hotels in Mar del Plata (round trip).</li>
+                    <li>Daily transfers from hotels in Mar del Plata to Santa Clara del Mar (round trip).</li>
+                    <li>Excursions, tours, and tourist advice.</li>
+                </ul>
+                <h3>Inquires and reservation</h3>
+                <div>
+                    <p>Whatsapp +54 9 11 5450-9599</p>
+                </div>
+                
+
             </div>
             <div class="needHelpContainer turismNeed">
                 <button class="needHelpBtn btnHelp"
