--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -228,7 +228,7 @@ main{
     position: absolute;
     color: #FFFFFF;
     font-size: 5rem;
-    top:5rem;
+    top:6rem;
     text-shadow: 1px 1px 3px black;
 }
 .bannerHome h3{
@@ -242,7 +242,7 @@ main{
     position: absolute;
     color: #FFFFFF;
     font-size: 2.5rem;
-    top:3rem;
+    top:4.5rem;
     text-shadow: 1px 1px 3px black;
     text-align: center;
 }
@@ -271,6 +271,7 @@ main{
     width: 50%;
     height: auto;
     padding: 3rem;
+    overflow: hidden;
 }
 .containerMain h4{
     font-size: 2.1rem;
