Add data to inscription

--- a/views/home/inscription.ejs
+++ b/views/home/inscription.ejs
@@ -47,10 +47,12 @@
                     <li>The payment instructions will be shown once you have completed the registration</li>
                     <li>After paying, you will get registered and you will get a spot in the WIAC 2025.</li>
                     <li>Note: Amounts will be charged in local currency (ARS).</li>
-                    <li>PLEASE NOTE The transfer commission fees are as follows:<br>
+                    <li>NOTE The transfer commission fees are as follows:<br>
                         $15 USD for transfers up to $500 USD.<br>
                         $25 USD for transfers from $501 USD to $1,000 USD.<br>
                         You can include two or more registrations in a single transfer.</li>
+                    <li>NOTE: Your own banks charge a commission, and that must be taken into account when sending the registration fee.
+                    </li>
                     <li>(*) items in the form need to be complete.</li>
                     
                     <li>Please read the <a class="aForm" href="/tyc">Terms of acceptance </a>before registration.</li>
