--- a/views/home/regSumary.ejs
+++ b/views/home/regSumary.ejs
@@ -121,6 +121,7 @@
                             $25 USD for transfers from $501 USD to $1,000 USD.<br>
                             You can include two or more registrations in a single transfer.
                         </li>
+                        <li>NOTE: Your own banks charge a commission, and that must be taken into account when sending the registration fee.</li>
                     </ul>
                 </div>
                 <div class="paymentInDollarInstruction">
@@ -158,6 +159,7 @@
                             $25 USD for transfers from $501 USD to $1,000 USD.<br>
                             You can include two or more registrations in a single transfer.
                         </li>
+                        <li>NOTE: Your own banks charge a commission, and that must be taken into account when sending the registration fee.</li>
                     </ul>
                 </div>
             </div>
