--- a/views/home/inscription.ejs
+++ b/views/home/inscription.ejs
@@ -43,7 +43,7 @@
                     </li>
                     <li>After filling the form, you will get 14 days from the reservation to pay the registration fee and send the receipt to wiac2025@gmail.com
                     </li>
-                    <li>After 14 days of the inscription, if you have not made the payment, your reservation will be <strong>CANCELED</strong> </li>
+                    <li>After 14 days of the inscription, if you have not made the payment, your reservation will be <strong>CANCELLED</strong> </li>
                     <li>The payment instructions will be shown once you have completed the registration</li>
                     <li>After paying, you will get registered and you will get a spot in the WIAC 2025.</li>
                     <li>Note: Amounts will be charged in local currency (ARS).</li>
