--- a/views/home/regSumary.ejs
+++ b/views/home/regSumary.ejs
@@ -94,7 +94,7 @@
                 </div>
                 <hr>
                 <div class="paymentInstruction">
-                    <h2>IMPORTANT: IF YOU ARE TRANSFERING EURO YOU MUST FOLLOW THIS INSTRUCTIONS</h2>
+                    <h2>IMPORTANT: IF YOU ARE TRANSFERRING EURO YOU MUST FOLLOW THIS INSTRUCTIONS</h2>
                     <h3>PAYMENT INSTRUCTIONS / INSTRUCCIONES DE PAGO:</h3>
                     <ul>
                         <li>
@@ -125,7 +125,7 @@
                     </ul>
                 </div>
                 <div class="paymentInDollarInstruction">
-                    <h2>IMPORTANT: IF YOU ARE TRANSFERING US DOLLARS YOU MUST FOLLOW THIS INSTRUCTIONS</h2>
+                    <h2>IMPORTANT: IF YOU ARE TRANSFERRING US DOLLARS YOU MUST FOLLOW THIS INSTRUCTIONS</h2>
                     <h3>PAYMENT INSTRUCTIONS / INSTRUCCIONES DE PAGO:</h3>
                     <ul>
                         <li>
@@ -171,7 +171,7 @@
                     send the receipt to wiac2025@gmail.com
                 </li>
                 <li>After 14 days of the inscription, if you have not made the payment, your reservation will be
-                    <strong>CANCELED</strong>
+                    <strong>CANCELLED</strong>
                 </li>
                 <li>After paying, you will get registered and you will get a spot in the WIAC 2025.</li>
                 <li>Note: Amounts will be charged in local currency (ARS).</li>
