--- a/views/home/home.ejs
+++ b/views/home/home.ejs
@@ -167,16 +167,7 @@
                 <span><p>The tournament takes place at Santa Clara del Mar Sport center, Buenos Aires, Argentina <br></p><a href="/ubicacion">SEE MORE</a></span>
             </div>
             <div class="booking">
-                <div class="card secondGroup">
-                <h3>SecondCall</h3>
-                <p class="cardUp">From February 1st 2025 to March 31st 2025</p>
-                <p class="precio Up">€170</p>
-                <p class="cardDown">Adults - Juniors - Veterans - Seniors</p>
-                <p class="precio Dw">€130</p>
-                <p class="cardD">Cubs</p>
-                <a class="btnInsc btnReg btnCard btnNO " href="/inscription">Register</a>
-            </div>
-            <div class="card earlyBird">
+            <div class="card  secondGroup">
                 <span class="spanCard"></span>
                 <h3>Early Bird</h3>
                 <p class="cardUp">From December 1st 2024 to January 31st 2025</p>
@@ -184,8 +175,17 @@
                 <p class="cardDown">Adults - Juniors - Veterans - Seniors</p>
                 <p class="precio Dw">€120</p>
                 <p class="cardD">Cubs</p>
-                <a class="btnInsc btnReg btnCard " href="/inscription">Register</a>
             </div>
+            <div class="card earlyBird">
+                <span class="spanCard1"></span>
+            <h3>SecondCall</h3>
+            <p class="cardUp">From February 1st 2025 to March 31st 2025</p>
+            <p class="precio Up">€170</p>
+            <p class="cardDown">Adults - Juniors - Veterans - Seniors</p>
+            <p class="precio Dw">€130</p>
+            <p class="cardD">Cubs</p>
+            <a class="btnInsc btnReg btnCard " href="/inscription">Register</a>
+        </div>
             
             <div class="card lastCall">
                 <h3>Last call</h3>
