--- a/views/home/participants.ejs
+++ b/views/home/participants.ejs
@@ -32,8 +32,7 @@
     <main>
         <h1 class="title">Participants</h1>
         <div class="containerParticipants">
-            <h2 class=""><Title>list of participants</Title></h2>
-            <a class="listadoPart" target="_blank" href="https://lookerstudio.google.com/reporting/d99ca3e2-b7a6-43a0-a147-f9e646b8f97a">LIST</a>
+            <a class="listadoPart" target="_blank"  href="#">LIST NOT AVAILABLE</a>
         </div>
         <div class="needHelpContainer">
             <button class="needHelpBtn btnHelp"
