--- a/views/home/pagenrep.html
+++ b/views/home/pagenrep.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./public/css/styles.css">
-    <link rel="shortcut icon" href="./public/img/LogoWIAC2025.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./public/img/newLogo.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header class="header">
-        <div class="logo"><a href="./index.html"><img class="logo " src="./public/img/LogoWIAC2025.png" alt="logo wiac 2025"></a></div>
+        <div class="logo"><a href="./index.html"><img class="logo " src="./public/img/newLogo.png" alt="logo wiac 2025"></a></div>
         <input type="checkbox" id="menu-toggle">
         <label for="menu-toggle" class="menu-icon">&#9776;</label> 
         <nav class="navbar">
