--- a/views/home/participants.ejs
+++ b/views/home/participants.ejs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="resources/css/loader.css">
     <link rel="stylesheet" href="resources/css/styles.css">
-    <link rel="shortcut icon" href="/resources/img/LogoWIAC2025.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/resources/img/newLogo.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header class="header">
-        <div class="logo"><a href="/"><img class="logo " src="/resources/img/LogoWIAC2025.png" alt="logo wiac 2025"></a></div>
+        <div class="logo"><a href="/"><img class="logo " src="/resources/img/newLogo.png" alt="logo wiac 2025"></a></div>
         <input type="checkbox" id="menu-toggle">
         <label for="menu-toggle" class="menu-icon">&#9776;</label> 
         <nav class="navbar">
@@ -32,7 +32,7 @@
     <main>
         <h1 class="title">Participants</h1>
         <div class="containerParticipants">
-            <a class="listadoPart" target="_blank"  href="#">LIST NOT AVAILABLE</a>
+            <a class="listadoPart" target="_blank"  href="https://lookerstudio.google.com/reporting/d99ca3e2-b7a6-43a0-a147-f9e646b8f97a">LIST</a>
         </div>
         <div class="needHelpContainer">
             <button class="needHelpBtn btnHelp"
@@ -45,7 +45,7 @@
     <footer class="footer">
         <div class="containerFooter">
             <img src="/resources/img/logoIFAA(@).png" alt="logoIFAA">
-            <img src="/resources/img/LogoWIAC2025.png" alt="logoWIAC">
+            <img src="/resources/img/newLogo.png" alt="logoWIAC">
             <img src="/resources/img/logoaata.png" alt="logoAATA">
             <div class="footerAconteiner">
                 <a href="/tyc" class="tycFooter">T&C</a>
