--- a/views/home/turism.ejs
+++ b/views/home/turism.ejs
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="resources/css/loader.css">
     <link rel="stylesheet" href="/resources/css/styles.css">
     <link rel="stylesheet" href="/resources/css/slider.css">
-    <link rel="shortcut icon" href="/resources/img/LogoWIAC2025.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/resources/img/newLogo.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
@@ -17,7 +17,7 @@
 
 <body>
     <header class="header">
-        <div class="logo"><a href="/"><img class="logo " src="/resources/img/LogoWIAC2025.png" alt="logo wiac 2025"></a>
+        <div class="logo"><a href="/"><img class="logo " src="/resources/img/newLogo.png" alt="logo wiac 2025"></a>
         </div>
         <input type="checkbox" id="menu-toggle">
         <label for="menu-toggle" class="menu-icon">&#9776;</label>
@@ -186,7 +186,7 @@
     <footer class="footer">
         <div class="containerFooter">
             <img src="/resources/img/logoIFAA(@).png" alt="logoIFAA">
-            <img src="/resources/img/LogoWIAC2025.png" alt="logoWIAC">
+            <img src="/resources/img/newLogo.png" alt="logoWIAC">
             <img src="/resources/img/logoaata.png" alt="logoAATA">
             <div class="footerAconteiner">
                 <a href="/tyc" class="tycFooter">T&C</a>
