--- a/views/home/home.ejs
+++ b/views/home/home.ejs
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="resources/css/loader.css">
     <link rel="stylesheet" href="resources/css/styles.css">
     <link rel="stylesheet" href="resources/css/timer.css">
-    <link rel="shortcut icon" href="/resources/img/LogoWIAC2025.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/resources/img/newLogo.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
@@ -17,7 +17,7 @@
 </head>
 <body>
     <header class="header">
-        <div class="logo"><a href="/"><img class="logo " src="/resources/img/LogoWIAC2025.png" alt="logo wiac 2025"></a></div>
+        <div class="logo"><a href="/"><img class="logo " src="/resources/img/newLogo.png" alt="logo wiac 2025"></a></div>
         <input type="checkbox" id="menu-toggle">
         <label for="menu-toggle" class="menu-icon">&#9776;</label> 
         <nav class="navbar">
@@ -41,7 +41,7 @@
             <p class="datepara">Nov-03-2025 | Santa Clara del Mar Prov. de Buenos Aires, Argentina </p>
         </div>
         <div class="containerMain">
-            <img src="resources/img/LogoWIAC2025.png" alt="logoWIAC2025">
+            <img src="resources/img/newLogo.png" alt="logoWIAC2025">
             <div class="message">
                 <h4>Message from the organisers</h4>
                 <br>
@@ -203,7 +203,7 @@
     <footer class="footer">
         <div class="containerFooter">
             <img src="/resources/img/logoIFAA(@).png" alt="logoIFAA">
-            <img src="/resources/img/LogoWIAC2025.png" alt="logoWIAC">
+            <img src="/resources/img/newLogo.png" alt="logoWIAC">
             <img src="/resources/img/logoaata.png" alt="logoAATA">
             <div class="footerAconteiner">
                 <a href="/tyc" class="tycFooter">T&C</a>
