--- a/views/home/registersucess.ejs
+++ b/views/home/registersucess.ejs
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="resources/css/loader.css">
         <link rel="stylesheet" href="/resources/css/styles.css">
-        <link rel="shortcut icon" href="/resources/img/LogoWIAC2025.png" type="image/x-icon">
+        <link rel="shortcut icon" href="/resources/img/newLogo.png" type="image/x-icon">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
