--- a/views/home/itinerario.ejs
+++ b/views/home/itinerario.ejs
@@ -42,8 +42,7 @@
                     will culminate with the March of Nations and the Opening Ceremony at 3:00 pm, a symbolic event that
                     will celebrate unity and the competitive spirit.<br>
                     <strong>Tuesday, November 4th:</strong><br> This day will be dedicated to the official competition. From 8:00 am to 7:00 pm,
-                    participants will have the opportunity to demonstrate their skills in the first <strong>INDOOR ROUND</strong>, after
-                    a new registration and practice period in the early hours of the day.<br>
+                    participants will have the opportunity to demonstrate their skills in the first <strong>INDOOR ROUND</strong>. Before each competition round, equipment inspection and registration may be done.<br>
                     <strong>Wednesday, November 5th and Thursday November 6th:</strong><br>The open practice field and the <strong>FLINT ROUND </strong>divided in the two days, from 8:30 am to 5:30 pm. During these days, competitors will seek to consolidate
                     their positions to advance in the tournament.<br>
                     <strong>Friday, November 7th:</strong><br> It will be a crucial day, with
