--- a/views/home/turism.ejs
+++ b/views/home/turism.ejs
@@ -166,10 +166,15 @@
                     <li>Transfers from Buenos Aires airports to hotels in Mar del Plata (round trip).</li>
                     <li>Daily transfers from hotels in Mar del Plata to Santa Clara del Mar (round trip).</li>
                     <li>Excursions, tours, and tourist advice.</li>
+                    <li>To hire this service, you must go and mention WIAC 2025 at the counter of the following airports: <br>
+                        EZE<br>
+                        MDQ<br>
+                        AEP</li>
                 </ul>
                 <h3>Inquires and reservation</h3>
                 <div>
                     <p>Whatsapp +54 9 11 5450-9599</p>
+                    <a class="linkTD" target="_blank" href="https://www.tiendaleonmdq.com/">TIENDA LEON</a>
                 </div>
                 
 
